[project]
name = "sticker-floor-watcher"
version = "0.1.0"
description = "Private Telegram bot tracking sticker floors across Harbor, MRKT, Palace, Pixel Market"
requires-python = ">=3.11"
authors = [{name = "Sticker Labs"}]
dependencies = [
    "aiogram==3.13.1",
    "fastapi==0.114.1",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "SQLAlchemy==2.0.35",
    "asyncpg==0.29.0",
    "redis==5.0.8",
    "APScheduler==3.10.4",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pytest==8.3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sticker_watcher"]

